--- a/app/views/tipps/index.html.erb
+++ b/app/views/tipps/index.html.erb
@@ -1,7 +1,11 @@
 
-    <main class="Row">
+    <main id="main" class="Row">
       
-      <h1>Welcome to the randomizer:</h1>
+      <h1>Welcome to the randomizer</h1>
+      <h2> 
+              Discover 5 new things to do in your city every day!
+
+      </h2>
 
     </main>
 
