--- a/app/views/tipps/new.html.erb
+++ b/app/views/tipps/new.html.erb
@@ -1,4 +1,4 @@
-<section class="form col-xs-10 col-xs-offset-1">
+<section class="form col-xs-10 col-xs-offset-1  form col-sm-4 col-sm-offset-4 col-xs-offset-1">
 <header>
   <h1>Share a Tip</h1>
 </header>
