--- a/app/views/feedback/index.html.erb
+++ b/app/views/feedback/index.html.erb
@@ -1,5 +1,5 @@
 
-<section class="form col-xs-10 col-xs-offset-1">
+<section class="form col-xs-10 col-xs-offset-1  form col-sm-4 col-sm-offset-4 col-xs-offset-1">
   <header> <h1> Give feedback </h1>  </header>
 
   <div class="formBody">
