--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,13 +14,13 @@
 
   <nav>
     <ul class="row">
-      <li class="col-xs-12"><%= link_to('home', tipps_path) %></li>
+      <li class="col-xs-12 col-sm-2"><%= link_to('home', tipps_path) %></li>
       
-      <li class="col-xs-12"><%= link_to('Feedback', feedback_index_path, :method => :get) %></li> 
+      <li class="col-xs-12 col-sm-2"><%= link_to('Feedback', feedback_index_path, :method => :get) %></li> 
       
-      <li class="col-xs-12"><%= link_to('new', new_tipp_path, :method => :get) %></li>  
+      <li class="col-xs-12 col-sm-2"><%= link_to('new', new_tipp_path, :method => :get) %></li>  
 
-      <li class="col-xs-12">
+      <li class="col-xs-12 col-sm-2">
         <% if current_user %>
       Hello <%= current_user.name.capitalize %>, you are signed in
         <% else %>
@@ -29,11 +29,11 @@
       </li>
       
         <% if user_signed_in? %>
-      <li class="col-xs-12"> <%= link_to('Logout', destroy_user_session_path, :method => :delete) %> </li>
+      <li class="col-xs-12 col-sm-2"> <%= link_to('Logout', destroy_user_session_path, :method => :delete) %> </li>
         
         <% else %>
-      <li class="col-xs-12"> <%= link_to('Sign in', new_user_session_path) %> </li>
-      <li class="col-xs-12"> <%= link_to('Sign up', new_user_registration_path) %> </li>
+      <li class="col-xs-12 col-sm-2"> <%= link_to('Sign in', new_user_session_path) %> </li>
+      <li class="col-xs-12 col-sm-2"> <%= link_to('Sign up', new_user_registration_path) %> </li>
         <% end %>
     </ul>
     
