Finished basic Styling

--- a/app/assets/stylesheets/tipp.css.scss
+++ b/app/assets/stylesheets/tipp.css.scss
@@ -2,38 +2,54 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 @font-face {
-        font-family: "QuickDash";
-        src: url("Quicksand_Dash.otf") format('otf');
-        
+
         font-family: "texgyros";
         src: url("texgyreheroscn-regular.otf") format('opentype');
     };
 
 body {  background-image: url("background.jpeg");
-        background-repeat: repeat; }
+        background-repeat: repeat;
+        }
+
 body, html { font-family: "texgyros"; height: 100%;}
 
 .container-fluid { height: 100%}
 
-main{ text-align: center;
-      h1{ font-size: 5em };
-      h2{ font-size: 4em } };
+
+
+main {  position:relative;
+        text-align: center;
+        min-height: 100%;
+        height:100%;
+        h1{ font-size: 5em };
+        h2{ font-size: 4em }
+}
+
+.endslogan { position: absolute; bottom: 0; right: 0;}
+
+.title{ width: 80%;
+        height: 80%;
+        overflow: auto;
+        margin: auto;
+        position: absolute;
+        top: 0; left: 0; bottom: 0; right: 0;}
 
 /* ONLY NAVS */
 
-nav { border: 1px dotted grey;
+nav { text-align: center;
       color: black;
+      font-size: 2em;}
+nav > div{  
+            border: 0px dotted black
+            }
 
-      a{ text-decoration: none };
-
-  ul {  padding:0;
-        font-size: 2em;
-        font-weight: bold;
-    li {  
-          text-align: center;
-          list-style-type:none;
-          text-decoration: none;
-    }}}
+nav .button { 
+              width: 100%; 
+              margin: 0 auto;
+              text-align: center;
+              border: 4px solid #BADA55;
+              border-radius: 10px;
+              margin-top: 5px;}
 
 /* FORMS ONLY */
 
@@ -42,49 +58,40 @@ nav { border: 1px dotted grey;
 }
 
 .form { margin-top: 5%;
-        // display: inline-block;
         padding: 0;
         text-align: center;
         color:white;}
 
-.formBody { font-size:1.5em;
+header{ font-size: 2em;
+        background-color: #c3d29f;
+        width:100%;
+        padding: 20px;
+        margin: 0}
+
+.formBody { font-size:1.75em;
             padding: 12px;
             color:white;
             background-color: #628e9d;
             margin-top: 0 }
 
-.formBody .feedbackTipp { font-family: "texgyros";
+.formBody .feedbackTipp { 
               font-size: 2em;
               margin-top: 50px;
               border-top: 1px dotted white;
               border-bottom: 1px dotted white }
+
 .formImage {margin-top: 30px;
             border: 1px dotted white}
-.votes a{ font-size: 3em;
+.votes a{ font-size: 2em;
           text-decoration: none;
           color: white;
            }
 .votes { margin-bottom: 30px }
 
+.votes>.button { border: 1px dotted white} 
+
 .input{color:black; margin-bottom: 10px;}
-
-header{ font-size: 2em;
-        font-family: "texgyros";
-        background-color: #c3d29f;
-        width:100%;
-        padding:20px;
-        margin: 0}
-
-
-.button { border: 1px dotted white}   
-
-  .feedback{ background-color: #628e9d;
-        padding-top:10px;
-        font-size: 1em;
-        color: black}
-
-        p { color: white;
-            }
+  
 
            
 #taken {  display: none; color: white}
@@ -98,10 +105,6 @@ header{ font-size: 2em;
 
 /* MAIN PAGE ONLY  */
 
-main {  position:relative;
-        height:100%;
-        border: 4px dotted white;}
-
 article { position: relative;
           border: 1px dotted grey;
           min-height: 100%;
@@ -109,21 +112,27 @@ article { position: relative;
           height: 100%;
           font-size: 1.5em;}
 .textbox { 
-            background-color: black;
+            background-color: rgba(0, 0, 0, 0.5);
             display: inline-block;
             color: white;}
 
+.comment { background-color: rgba(0, 0, 0, 0)}
+
+.bold { font-weight: bold;}
+
 .tippName{ font-size: 1.5em;}
 
-  
-.bottom { font-family: "texgyros"; 
-          color:red;
+ 
+.bottom { text-align:center;
+          font-family: "texgyros"; 
+          background-color: rgba(0, 0, 0, 0.5);
           font-size: 1em; 
-          border: 1px solid white;
           position: absolute;
-          bottom: 10px; 
-          background: black}
+          bottom: 0; 
+          }
 .bottom a { font-family: "texgyros";
             font-size: 2em;
             color:white;
             text-decoration :none;}
+
+.indexTwitt{ padding:10px }
