--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,31 +12,51 @@
 <div class="container-fluid">
 
 
-  <nav>
-    <ul class="row">
-      <li class="col-xs-12 col-sm-2"><%= link_to('home', tipps_path) %></li>
-      
-      <li class="col-xs-12 col-sm-2"><%= link_to('Feedback', feedback_index_path, :method => :get) %></li> 
-      
-      <li class="col-xs-12 col-sm-2"><%= link_to('new', new_tipp_path, :method => :get) %></li>  
+  <nav class="row">
+    
+      <div class="col-xs-12 col-sm-2">
 
-      <li class="col-xs-12 col-sm-2">
+        <div class="button"><%= link_to('home', tipps_path) %></div> 
+
+      </div>
+      
+      <div class="col-xs-12 col-sm-2">
+
+        <div class="button"><%= link_to('Feedback', feedback_index_path, :method => :get) %></div>  
+      </div> 
+      
+      <div class="col-xs-12 col-sm-2">
+
+        <div class="button"><%= link_to('new', new_tipp_path, :method => :get) %></div>
+
+      </div>  
+
+      <div class="col-xs-12 col-sm-2 col-sm-offset-2">
+
         <% if current_user %>
       Hello <%= current_user.name.capitalize %>, you are signed in
         <% else %>
       you are not signed in  
         <% end %>
-      </li>
       
-        <% if user_signed_in? %>
-      <li class="col-xs-12 col-sm-2"> <%= link_to('Logout', destroy_user_session_path, :method => :delete) %> </li>
+
+      </div>
+      
+      <div class="col-xs-12 col-sm-2 signin">
+         
+         <div>
+          <% if user_signed_in? %>
+            <div class="button"> <%= link_to('Logout', destroy_user_session_path, :method => :delete) %>  </div>
+            
+          
+          <% else %>
+            <div class="button"> <%= link_to('Sign in', new_user_session_path) %></div>
+            <div class="button signup"> <%= link_to('Sign up', new_user_registration_path) %></div>
+          <% end %>
+          </div>
         
-        <% else %>
-      <li class="col-xs-12 col-sm-2"> <%= link_to('Sign in', new_user_session_path) %> </li>
-      <li class="col-xs-12 col-sm-2"> <%= link_to('Sign up', new_user_registration_path) %> </li>
-        <% end %>
-    </ul>
-    
+    </div>
+
   </nav>  
 
 <%= yield %>
