--- a/app/views/tipps/index.html.erb
+++ b/app/views/tipps/index.html.erb
@@ -1,12 +1,22 @@
 
-    <main id="main" class="Row">
+    <main class="Row" >
       
-      <h1>Welcome to the randomizer</h1>
-      <h2> 
-              Discover 5 new things to do in your city every day!
+      <div class="title">
+      <h1>Welcome to The Randomizer</h1>
 
+      
+        <h2> 
+              Discover 5 places in your city every day!
       </h2>
 
+        <h2> 
+           
+      </h2>
+        <h2 class="endslogan"> 
+              ... and share your own discoveries with others
+      </h2>
+ 
+      </div>
     </main>
 
 
@@ -15,32 +25,32 @@
      
 
 
-      <div class='textbox tippName col-xs-12'>
+      <div class='textbox tippName col-xs-12' >
           <h2>  <% if tipp.offer %> Special! <% end %> <%= tipp.name %> </h2> 
+ 
+     <% if tipp.comments.count > 0 %>
+   <div class='textbox comment col-xs-12'>  <span class="bold"> 
+       <%= tipp.random_comment.user.name.capitalize %> says " </span> <%= tipp.random_comment.content %>  <span class="bold"> " </span>
+   </div>
+     <% end %>
       </div>
-      
-        <% if tipp.comments.count > 0 %>
-      <div class='textbox comment col-xs-12'>   
-          <%= tipp.random_comment.content %>
-      </div>
-        <% end %>
 
       <div class="bottom col-xs-12">
-
+        
+        <div class='col-xs-12 col-sm-3'>
           <% if tipp.website %>
-        <div class='col-xs-4'>
-          <a href="<%= tipp.website %>"> W W W </a>
+          <a href="<%= tipp.website %>"> Website </a>
+          <% end %>
+        </div>
+
+          <% if tipp.streetname %>
+        <div class='col-xs-12 col-sm-6'>
+          <a href="https://www.google.com/maps/place/<%= tipp.streetname %>"> <%= tipp.streetname %>, <%= tipp.city.name.capitalize %> </a>
         </div>
           <% end %>
 
-          <% if tipp.website %>
-        <div class='col-xs-4'>
-          <a href="https://www.google.com/maps/place/<%= tipp.streetname %>"> <%= tipp.streetname %> </a>
-        </div>
-          <% end %>
-
-        <div class="col-xs-4">
-          <a href="https://twitter.com/share" data-text="On my way to: <%= tipp.name%>!! #randomizer #barcelona" data-url="www.randomizer.com" data-related="@kind_of_Ruby" <%if tipp.twitter %>data-via="<%=tipp.twitter %><% end %>" class="twitter-share-button" data-lang="en" data-count="none" > Tweet </a>
+        <div class="col-xs-12 col-sm-2 indexTwitt">
+          <a href="https://twitter.com/share" data-size="large"  data-text="On my way to: <%= tipp.name%>!! #randomizer #barcelona" data-url="www.randomizer.com" data-related="@kind_of_Ruby" <%if tipp.twitter %>data-via="<%=tipp.twitter %><% end %>" class="twitter-share-button" data-lang="en" data-count="none" > Tweet </a>
         </div>
       </div>  
 
@@ -53,5 +63,4 @@
 <script> App.checkDuplicated();
 
 !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="https://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");
-
 </script>
