feedback gives links when place not found + standarized fom

--- a/app/assets/stylesheets/tipp.css.scss
+++ b/app/assets/stylesheets/tipp.css.scss
@@ -124,7 +124,7 @@ header {
   border: 0
 }
 
-#taken a, .alert a { 
+.formBody a, #taken a, .alert a { 
   color: white;
   border: 0; 
   font-weight: bold;
