--- a/app/views/feedback/index.html.erb
+++ b/app/views/feedback/index.html.erb
@@ -7,27 +7,29 @@
     <% unless @tipps %>
       <p> Write the name of a place you want to review</p>
       
-      <%= form_tag(feedback_index_path, :method => "get") do %>
-      <%= text_field_tag :search, params[:search], placeholder: "Search Tipps", :class => "input" %>
-      <%= submit_tag "Search", :name => nil, :class => "input" %>
+      <%= form_tag(feedback_index_path, method: "get") do %>
+      <%= text_field_tag :search, params[:search], placeholder: "Search Tipps", required: true, class: "input" %>
+      <%= submit_tag "Search", name: nil, class: "input" %>
       <% end %>
 
 
       <% if flash[:notice] && @alltipps %>
-        <p>  <%= flash[:notice] %> <% if @alltipps.size >0 %>
-        Do you mean...
-        <% end %> </p>
+        <p>  <%= flash[:notice] %> 
+          
+          <% if @alltipps.size >0 %>
+           Do you mean...
+          <% end %> </p>
         <p> 
+        
         <% @alltipps.each do |x| %>
-        <%=  x.name %>?
-      <% end %>
+        <%=  link_to x.name, feedback_index_path(search: x.name) %>?
+        <% end %>
         </p>
-    <% end %>
-
-    <% end %>
+        <% end %>
+      <% end %>
 
     <% if @tipps %>
-      <h2 class="feedbackTipp"> <%= @tipps.name %> (<%= @tipps.points %>) </h2>
+      <h2 class="feedbackTipp"> <%= @tipps.name %></h2>
       <div class="col-xs-12">
           <p>What did you think about <%= @tipps.name %>, would you recommend it? </p>
           <p><%= flash[:voted] %></p>
