--- a/app/views/feedback/index.html.erb
+++ b/app/views/feedback/index.html.erb
@@ -38,21 +38,16 @@
         <%= link_to "yes", feedback_new_path(vote: "up",tipp: @tipps.id), :method => "post", :class => "col-xs-12 col-sm-6 button" %>
                   
         <%= link_to "no", feedback_new_path(vote: "down",tipp:@tipps.id), :method => "post", :class => "col-xs-12 col-sm-6 button"%>
-      <span class="row twitt-container">
+        <span class="row twitt-container">
 
-        <p> Share your love: <br />
-        <a href="https://twitter.com/share" data-size="large" data-text="I just discoverd something new in <%= @tipps.city.name%>: <%= @tipps.name%> #randomizer #barcelona" data-url="www.randomizer.com" data-related="@kind_of_Ruby" <%if @tipps.twitter %> <%=@tipps.twitter %> <% end %> class="twitter-share-button" data-lang="en" data-count="none"> Tweet </a></p>
-      </span>
+          <p> Share your love: <br />
+            <a href="https://twitter.com/share" data-size="large" data-text="I just discoverd something new in <%= @tipps.city.name%>: <%= @tipps.name%> #randomizer #barcelona" data-url="www.randomizer.com" data-related="@kind_of_Ruby" <%if @tipps.twitter %> <%=@tipps.twitter %> <% end %> class="twitter-share-button" data-lang="en" data-count="none"> Tweet </a></p>
+        </span>
       </div>              
-    <% end %>
-
-  
-               
+    <% end %>             
   </div>
 </section>
 
-<script type='text/javascript'> 
-
+<script>
 !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="https://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");
-
 </script>
